dumping stuff for testing

--- a/_posts/2022-12-15-testing.md
+++ b/_posts/2022-12-15-testing.md
@@ -6,6 +6,8 @@ date: 2022-12-15 12:39 -0500
 
 // Mention that the GTEST flag needs to be enabled
 
+// if test are acting weird. blow away your build directory
+
 // go over make tests
 
 // Link Dump
@@ -17,3 +19,20 @@ https://notes.eatonphil.com/unit-testing-c-code-with-gtest.html#:~:text=We%27ll%
 https://meekrosoft.wordpress.com/2009/11/09/unit-testing-c-code-with-the-googletest-framework/
 https://google.github.io/googletest/gmock_for_dummies.html
 https://wiki.blender.org/wiki/Tools/Tests/Python
+
+<!-- make test | grep -i -B 5 -A 5 'nla_strip'   -->
+
+// Building blender via VS code:
+https://wiki.blender.org/wiki/Developer_Intro/Environment/Portable_CMake_VSCode
+
+https://wiki.blender.org/wiki/Tools/Tips_for_Coding_Blender
+
+Things to do to commit a patch:
+
+1.
+
+Make sure that:
+
+1. the differential is in the commit message
+2. the reviewer is on the differental
+3. make sure the patch has the appropriate prefix
